# log_analysis

log_analysis_demo/log-analysis-gemini/: README.md  pyproject.toml  requirements.txt
log_analysis_demo/log-analysis-gemini/logs/: simulator_test.txt  test_log.txt
log_analysis_demo/log-analysis-gemini/notebooks/: exploration.ipynb
log_analysis_demo/log-analysis-gemini/output/: error_analysis.json  gemini_analysis.txt  llm_input.txt  report.txt
log_analysis_demo/log-analysis-gemini/src/: analyzer.py  config.py  main.py  start.py
log_analysis_demo/log-analysis-gemini/src/api/: gemini_client.py
log_analysis_demo/log-analysis-gemini/src/models/: log_model.py
log_analysis_demo/log-analysis-gemini/src/utils/: io.py  parser.py
log_analysis_demo/log-analysis-gemini/tests/: test_analyzer.py  test_gemini_client.py
