[tool.poetry]
name = "log-analysis-gemini"
version = "0.1.0"
description = "A log analysis model using the Gemini API."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"